FIX: Background height overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,105 +1,122 @@
+@font-face {
+	font-style: normal;
+	font-family: "Montserrat Medium";
+	font-weight: 500;
+	src: url("assets/fonts/Montserrat/Montserrat-Medium.ttf") format('truetype');
+}
+
+
+
 * {
-   margin: 0;
-   box-sizing: border-box;
-   padding: 0;
-   list-style: none;
-   text-decoration: none;
+	margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	font-family: 'Montserrat Medium', sans-serif;
+}
+
+html {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
 
 body {
-   /* display: flex;
-   align-items: center;
-   justify-content: center; */
-   background: linear-gradient(to bottom, #2455c0, #0b142c);
-   /* min-height: 100%; */
-   height: 100vh;
-   display: grid;
-   place-content: center;
-   /* max-height: fit-content; */
-   /* width: auto; */
-   /* height: fit-content; */
+	display: grid;
+	background: linear-gradient(to bottom, #2455c0, #0b142c) fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100%;
+	overflow: auto;
+	place-items: center;
 }
 
+
+
 .container {
-   display: grid;
-   grid-template-rows: repeat(2, 1fr);
-   /* border: 1px solid red; */
-   margin: 24%;
-   gap: 60px;
-   /* height: 100%; */
-   /* width: 50%; */
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+	width: 1050px;
+	gap: 60px;
+	justify-items: center;
 }
 
 .top-container {
-   display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   align-items: center;
-   justify-items: center;
-   /* border: 1px solid red; */
-   width: 100%;
+	display: grid;
+	align-items: center;
+	grid-template-columns: repeat(3, 1fr);
+	width: 100%;
+	justify-items: center;
 }
 
 .cardboard {
-   display: flex;
-   flex-direction: column;
-   background: #9e1c23;
-   height: 225px;
-   width: 300px;
-   text-transform: uppercase;
-   text-align: center;
-   box-shadow: #0b142c 0px 0px 5px;
-   align-items: center;
-   justify-content: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: #9e1c23;
+	height: 225px;
+	width: 300px;
+	text-transform: uppercase;
+	text-align: center;
+	box-shadow: #0b142c 0px 0px 5px;
 }
 
 .cardboard h2 {
-   margin: 15px 0;
-   color: #eee;
+	margin: 12px 0;
+	font-size: 30px;
+	color: #eee;
 }
 
 .cardboard-content {
-   display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(3, 1fr);
-   margin: 0 5px 5px;
-   height: 100%;
-   width: auto;
-   gap: 5px;
-   align-content: center;
-   justify-content: center;
+	display: grid;
+	justify-content: center;
+	align-content: center;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	margin: 0 5px 5px;
+	height: 100%;
+	width: auto;
+	gap: 6px;
 }
 
 .box {
-   background: #eee;
-   height: 50px;
-   width: 50px;
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #eee;
+	height: 49px;
+	width: 53px;
+	font-size: 22px;
 }
 
 .bombo {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   border: 5px solid #000;
-   border-radius: 50%;
-   background: radial-gradient(#eee, #000);
-   height: 250px;
-   width: 250px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 5px solid #000;
+	border-radius: 50%;
+	background: radial-gradient(#eee, #000);
+	height: 250px;
+	width: 250px;
+}
+
+.bombo > .box {
+	border: 4px solid #757575;
+	height: 55px;
+	width: 55px;
 }
 
 
-
-
-
 .bottom-container {
-   display: flex;
-   border: 2px solid #eee;
-   width: 100%;
-   flex-wrap: wrap;
-   align-content: baseline;
-   /* overflow: hidden; */
-   gap: 5px;
-   /* margin-top: 20px; */
-   padding: 15px;
+	display: flex;
+	align-content: baseline;
+	flex-wrap: wrap;
+	border: 1px solid #eee;
+	min-height: 19.1875rem;
+	width: 100%;
+	padding: 20px;
+	gap: 5px;
 }
 
